2009-02-23  Ankit Jain  <jankit@novell.com>

	* Items.cs (TestItemsInTarget8): New.
	(TestItemsInTarget9): New.

2009-02-20  Ankit Jain  <jankit@novell.com>

	* Conditions.cs (TestCondition11): New. Test unquoted item/property
	references in conditions.

2009-01-01  Ankit Jain  <jankit@novell.com>

	* Items.cs: Add tests for expression parsing, mainly for concat'ing
	expressions. Remove "NotWorking" for some tests that are working now.

2008-11-21  Ankit Jain  <jankit@novell.com>

	* Items.cs (TestItemsInTarget1): Remove 'NotWorking' attribute.

2008-11-11  Jonathan Chambers  <joncham@gmail.com>

	* Items.cs: Use Path.DirectorySeparatorChar instead of 
	hardcoded '/' to fix test on Windows.

2007-01-23  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* EvaluationOrder.cs: Removed NotWorking from test that started to
	work.

2007-01-19  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Condition.cs: More tests.

2007-01-12  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Build.cs: More tests.

2006-12-19  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Build.cs: Added.

	* Condition.cs, ProjectElement.cs: More tests.

2006-12-18  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Items.cs: More tests.

2006-12-16  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Items.cs: Split not working test from others and add a test for
	reference to item that doesn't exist.

2006-12-16  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Items.cs, Conditions.cs, EvaluationOrder.cs: More tests.

2006-12-11  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* EvaluationOrder.cs: Enabled more tests.

2006-12-07  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* EvaluationOrder.cs, Conditions.cs: More tests.

2006-12-05  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Conditions.cs: Enabled some more tests.

2006-12-04  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* EvaluationOrder.cs, Condition.cs: Added.

2006-12-04  Marek Sieradzki  <marek.sieradzki@gmail.com>
